<resources>
    <string name="app_name">StreamingThoughts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_new_header">Record a new entry</string>
    <string name="pause">PAUSE</string>
    <string name="record">Record</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="back_button">Goes back</string>
    <string name="play">Play</string>
    <string name="created_at">Created At:</string>
    <string name="journal_entry">My Journal Entry on:</string>
    <string name="now_playing">Now Playing:</string>
    <string name="playing_entry">Playing Entry:</string>
    <string name="back_to_main">Goes back to main activity</string>
    <string name="reset">Reset</string>
    <string name="complete">Complete</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New user? Sign up here!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="welcome_message">Welcome to Streaming Thoughts!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="strming_thghts">Streaming Thoughts!</string>
    <string name="anon_sign_in">Anon Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="please_enter">Please Enter Your Info to Continue</string>
    <string name="add_account">Add Account</string>
    <string name="start_without_account">Start without Account</string>
    <string name="please_new">Please enter new file name</string>
    <string name="file_name_please">File Name</string>
    <string name="change">Change</string>
    <string name="please_sign_in_to_continue">Please Sign In to Continue</string>
</resources>